Fixed a bug with join icons not showing.

--- a/saw-web/assets/fonts/icomoon.css
+++ b/saw-web/assets/fonts/icomoon.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('icomoon.ttf?g1ve0q') format('truetype'),
-    url('icomoon.woff?g1ve0q') format('woff'),
-    url('icomoon.svg?g1ve0q#icomoon') format('svg');
+    url('icomoon.ttf?1bqsh5') format('truetype'),
+    url('icomoon.woff?1bqsh5') format('woff'),
+    url('icomoon.svg?1bqsh5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,7 +24,7 @@
 }
 
 .icon-timeseries-chart:before {
-  content: "\e902";
+  content: "\e956";
 }
 .icon-help:before {
   content: "\e900";
@@ -32,17 +32,35 @@
 .icon-pie-chart:before {
   content: "\e901";
 }
-.icon-arrow-down:before {
+.icon-uniE902:before {
+  content: "\e902";
+}
+.icon-uniE903:before {
   content: "\e903";
 }
-.icon-arrow-up:before {
+.icon-uniE901:before {
+  content: "\e904";
+}
+.icon-uniE905:before {
+  content: "\e905";
+}
+.icon-uniE906:before {
   content: "\e906";
+}
+.icon-uniE9022:before {
+  content: "\e907";
 }
 .icon-arrow-left:before {
   content: "\e908";
 }
+.icon-uniE904:before {
+  content: "\e909";
+}
 .icon-fork:before {
   content: "\e90a";
+}
+.icon-uniE9052:before {
+  content: "\e90b";
 }
 .icon-bell-list:before {
   content: "\e90c";
@@ -56,10 +74,10 @@
 .icon-calendar:before {
   content: "\e90f";
 }
-.icon-caret-small:before {
+.icon-uniE910:before {
   content: "\e910";
 }
-.icon-rounded-square:before {
+.icon-uniE911:before {
   content: "\e911";
 }
 .icon-card-view:before {
@@ -77,6 +95,12 @@
 .icon-collapse:before {
   content: "\e916";
 }
+.icon-uniE90F:before {
+  content: "\e917";
+}
+.icon-uniE9102:before {
+  content: "\e918";
+}
 .icon-description:before {
   content: "\e919";
 }
@@ -89,14 +113,41 @@
 .icon-group-by-column:before {
   content: "\e91c";
 }
+.icon-uniE91D:before {
+  content: "\e91d";
+}
+.icon-uniE91E:before {
+  content: "\e91e";
+}
+.icon-uniE91F:before {
+  content: "\e91f";
+}
 .icon-hor-bar-chart:before {
   content: "\e920";
+}
+.icon-uniE91C:before {
+  content: "\e921";
+}
+.icon-uniE922:before {
+  content: "\e922";
+}
+.icon-uniE923:before {
+  content: "\e923";
+}
+.icon-uniE924:before {
+  content: "\e924";
+}
+.icon-uniE91D2:before {
+  content: "\e925";
 }
 .icon-key:before {
   content: "\e926";
 }
 .icon-launchpad:before {
   content: "\e927";
+}
+.icon-uniE9232:before {
+  content: "\e928";
 }
 .icon-menu:before {
   content: "\e929";
@@ -113,11 +164,23 @@
 .icon-plus:before {
   content: "\e92d";
 }
+.icon-uniE92E:before {
+  content: "\e92e";
+}
+.icon-uniE92F:before {
+  content: "\e92f";
+}
+.icon-uniE930:before {
+  content: "\e930";
+}
 .icon-print:before {
   content: "\e931";
 }
-.icon-caret-large:before {
+.icon-Shape-Copy-2:before {
   content: "\e932";
+}
+.icon-Shape-Copy-22:before {
+  content: "\e933";
 }
 .icon-sort:before {
   content: "\e934";
@@ -179,11 +242,20 @@
 .icon-edit:before {
   content: "\e947";
 }
+.icon-uniE92D:before {
+  content: "\e948";
+}
 .icon-expand:before {
   content: "\e949";
 }
+.icon-uniE92E2:before {
+  content: "\e94a";
+}
 .icon-eye-disabled:before {
   content: "\e94b";
+}
+.icon-uniE92F2:before {
+  content: "\e94c";
 }
 .icon-filter:before {
   content: "\e94d";
@@ -191,15 +263,24 @@
 .icon-search:before {
   content: "\e94e";
 }
+.icon-uniE91E2:before {
+  content: "\e94f";
+}
+.icon-uniE9222:before {
+  content: "\e950";
+}
 .icon-MAX:before {
   content: "\e951";
 }
-.icon-area-chart-minimal:before {
+.icon-uniE921:before {
+  content: "\e952";
+}
+.icon-uniE953:before {
   content: "\e953";
 }
-.icon-xy-axes:before {
+.icon-uniE954:before {
   content: "\e954";
 }
-.icon-line-chart-minimal:before {
+.icon-uniE955:before {
   content: "\e955";
 }
